Enhances 'spo list roleassignment' commands with Entra groups. Closes #6194

--- a/docs/docs/cmd/spo/file/file-roleassignment-remove.mdx
+++ b/docs/docs/cmd/spo/file/file-roleassignment-remove.mdx
@@ -29,7 +29,7 @@ m365 spo file roleassignment remove [options]
 : The upn/email of the user. Specify either `upn`, `groupName`, or `principalId` but not multiple.
 
 `--groupName [groupName]`
-: The group name of a Microsoft Entra or SharePoint group. Specify either `upn`, `groupName`, or `principalId` but not multiple.
+: The group name of the SharePoint group Specify either `upn`, `groupName`, or `principalId` but not multiple.
 
 `-f, --force`
 : Don't prompt for confirmation.
