--- a/docs/docs/cmd/spo/listitem/listitem-roleassignment-add.mdx
+++ b/docs/docs/cmd/spo/listitem/listitem-roleassignment-add.mdx
@@ -35,7 +35,7 @@ m365 spo listitem roleassignment add [options]
 : The upn/email of user to assign role to. Specify either `upn`, `groupName` or `principalId`.
 
 `--groupName [groupName]`
-: The group name of Microsoft Entra or SharePoint group. Specify either `upn`, `groupName` or `principalId`.
+: The group name of the SharePoint group Specify either `upn`, `groupName` or `principalId`.
 
 `--roleDefinitionId [roleDefinitionId]`
 : ID of role definition. Specify either `roleDefinitionId` or `roleDefinitionName` but not both.
