--- a/docs/docs/cmd/spo/listitem/listitem-roleassignment-remove.mdx
+++ b/docs/docs/cmd/spo/listitem/listitem-roleassignment-remove.mdx
@@ -35,7 +35,7 @@ m365 spo listitem roleassignment remove [options]
 : The upn/email of user. Specify either `principalId`, `upn`, or `groupName` but not multiple.
 
 `--groupName [groupName]`
-: The group name of Microsoft Entra or SharePoint group. Specify either `principalId`, `upn`, or `groupName` but not multiple.
+: The group name of the SharePoint group Specify either `principalId`, `upn`, or `groupName` but not multiple.
 
 `-f, --force`
 : Don't prompt for confirming removing the role assignment.
