--- a/docs/docs/cmd/spo/web/web-roleassignment-add.mdx
+++ b/docs/docs/cmd/spo/web/web-roleassignment-add.mdx
@@ -23,7 +23,7 @@ m365 spo web roleassignment add [options]
 : The upn/email of user to assign role to. Specify either `principalId`, `upn`, or `groupName` but not multiple.
 
 `--groupName [groupName]`
-: The group name of Microsoft Entra or SharePoint group. Specify either `principalId`, `upn`, or `groupName` but not multiple.
+: The group name of the SharePoint group Specify either `principalId`, `upn`, or `groupName` but not multiple.
 
 `--roleDefinitionId [roleDefinitionId]`
 : ID of role definition. Specify either `roleDefinitionId` or `roleDefinitionName` but not both.
