--- a/docs/docs/cmd/spo/web/web-roleassignment-remove.mdx
+++ b/docs/docs/cmd/spo/web/web-roleassignment-remove.mdx
@@ -23,7 +23,7 @@ m365 spo web roleassignment remove [options]
 : The upn/email of user to assign role to. Specify either `principalId`, `upn`, or `groupName` but not multiple.
 
 `--groupName [groupName]`
-: The group name of Microsoft Entra or SharePoint group. Specify either `principalId`, `upn`, or `groupName` but not multiple.
+: The group name of the SharePoint group Specify either `principalId`, `upn`, or `groupName` but not multiple.
 
 `-f, --force`
 : Don't prompt for confirming removing the roleassignment.
