--- a/docs/docs/cmd/spo/list/list-roleassignment-remove.mdx
+++ b/docs/docs/cmd/spo/list/list-roleassignment-remove.mdx
@@ -26,13 +26,19 @@ m365 spo list roleassignment remove [options]
 : Relative URL of the list. Specify either `listId`, `listTitle`, or `listUrl` but not multiple.
 
 `--principalId [principalId]`
-: SharePoint ID of principal it may be either user id or group id you want to remove permissions. Specify either `principalId`, `upn`, or `groupName` but not multiple.
+: SharePoint ID of principal it may be either user id or group id you want to remove permissions. Specify either `principalId`, `upn`, `groupName`, `entraGroupId`, or `entraGroupName`.
 
 `--upn [upn]`
-: The upn/email of user. Specify either `principalId`, `upn`, or `groupName` but not multiple.
+: The upn/email of user. Specify either `principalId`, `upn`, `groupName`, `entraGroupId`, or `entraGroupName`.
 
 `--groupName [groupName]`
-: The group name of Microsoft Entra or SharePoint group. Specify either `principalId`, `upn`, or `groupName` but not multiple.
+: The group name of the SharePoint group. Specify either `principalId`, `upn`, `groupName`, `entraGroupId`, or `entraGroupName`.
+
+`--entraGroupId [entraGroupId]`
+: ID of the Microsoft Entra group. Specify either `principalId`, `upn`, `groupName`, `entraGroupId`, or `entraGroupName`.
+
+`--entraGroupName [entraGroupName]`
+: Display name of the Microsoft Entra group. Specify either `principalId`, `upn`, `groupName`, `entraGroupId`, or `entraGroupName`.
 
 `-f, --force`
 : Don't prompt for confirming removing the role assignment.
@@ -58,6 +64,12 @@ Remove roleassignment from list by url based on principal Id.
 
 ```sh
 m365 spo list roleassignment remove --webUrl "https://contoso.sharepoint.com/sites/contoso-sales" --listUrl '/sites/contoso-sales/lists/Events' --principalId 2
+```
+
+Remove roleassignment from Microsoft Entra group specified by display name.
+
+```sh
+m365 spo list roleassignment remove --webUrl "https://contoso.sharepoint.com/sites/contoso-sales" --listUrl '/sites/contoso-sales/lists/Events' --entraGroupName "Sales Team"
 ```
 
 ## Response
