New command: m365 entra multitenant remove

--- a/docs/docs/cmd/entra/multitenant/multitenant-remove.mdx
+++ b/docs/docs/cmd/entra/multitenant/multitenant-remove.mdx
@@ -27,6 +27,14 @@ To use this command you must be at least **Security Administrator**.
 
 :::
 
+:::info
+
+When removing a Multi-Tenant Organization, all associations with other tenants will be removed too.
+
+The removing process can take up to 2 hours to complete.
+
+:::
+
 ## Examples
 
 Remove the multitenant organization
