Updates release notes

--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -4,6 +4,20 @@ sidebar_position: 3
 
 # Release notes
 
+## v8.1.0 (beta)
+
+### New commands 
+
+**SharePoint Embedded:**
+
+- [spe containertype list](../cmd/spe/containertype/containertype-list.mdx) - retrieves a list of Container Types created for a SharePoint Embedded Application [#5989](https://github.com/pnp/cli-microsoft365/issues/5989)
+
+### Changes
+
+- fixed command 'teams meeting list' [#5968](https://github.com/pnp/cli-microsoft365/issues/5968)
+- introduced zod validation [#5639](https://github.com/pnp/cli-microsoft365/issues/5639)
+- added 'componentProperties' option to 'spo spfx' commands [#5975](https://github.com/pnp/cli-microsoft365/issues/5975)
+
 ## [v8.0.0](https://github.com/pnp/cli-microsoft365/releases/tag/v8.0.0)
 
 ### New commands 
