New command: entra group set

--- a/docs/docs/cmd/entra/group/group-set.mdx
+++ b/docs/docs/cmd/entra/group/group-set.mdx
@@ -72,6 +72,8 @@ This command allows using unknown options. For a comprehensive list of group pro
 
 If the specified option is not found, you will receive a `Resource 'xyz' does not exist or one of its queried reference-property objects are not present.` error.
 
+If the existing members or owners are not specified in the `memberIds`, `memberUserNames`, `ownerIds`, or `ownerUserNames` options, they will be removed from the group.
+
 ## Examples
 
 Update the display name of a group specified by the display name
