--- a/docs/docs/v10-upgrade-guidance.mdx
+++ b/docs/docs/v10-upgrade-guidance.mdx
@@ -21,3 +21,12 @@ Option | Description
 Update your scripts with the following:
 
 - Add the option `--force` if you want to bypass the confirmation prompt and proceed with the removal operation automatically.
+
+### Removed the deprecated `wait` option and output from the `spo tenant recyclebinitem restore` command
+
+For this new major version, we've removed the deprecated `wait` option from the `spo tenant recyclebinitem restore` command. The command now won't return a response on success.
+
+#### What action do I need to take?
+
+- Please, check the documentation of the [spo tenant recyclebinitem restore](./cmd/spo/tenant/tenant-recyclebinitem-restore.mdx) command to see the updated output and adjust your scripts accordingly.
+- In the `spo tenant recyclebinitem restore` command, remove deprecated `wait` option from your scripts.
