--- a/docs/docs/cmd/cli/cli-doctor.mdx
+++ b/docs/docs/cmd/cli/cli-doctor.mdx
@@ -22,7 +22,7 @@ This command gets all the necessary diagnostic information needed to triage and 
 
 ## Examples
 
-Retrieve diagnostic information
+Retrieve diagnostic information.
 
 ```sh
 m365 cli doctor
@@ -42,8 +42,8 @@ m365 cli doctor
     },
     "cliVersion": "6.1.0",
     "nodeVersion": "v16.13.0",
-    "cliAadAppId": "31359c7f-bd7e-475c-86db-fdb8c937548e",
-    "cliAadAppTenant": "common",
+    "cliEntraAppId": "31359c7f-bd7e-475c-86db-fdb8c937548e",
+    "cliEntraAppTenant": "common",
     "authMode": "DeviceCode",
     "cliEnvironment": "",
     "cliConfig": {
@@ -61,23 +61,23 @@ m365 cli doctor
   <TabItem value="Text">
 
   ```text
-  authMode       : DeviceCode
-  cliAadAppId    : 31359c7f-bd7e-475c-86db-fdb8c937548e
-  cliAadAppTenant: common
-  cliConfig      : {"output":"json","showHelpOnFailure":false}
-  cliEnvironment :
-  cliVersion     : 6.1.0
-  nodeVersion    : v16.13.0
-  os             : {"platform":"win32","version":"Windows 10 Pro","release":"10.0.19045"}
-  roles          : []
-  scopes         : ["AllSites.FullControl"]
+  authMode          : DeviceCode
+  cliEntraAppId     : 31359c7f-bd7e-475c-86db-fdb8c937548e
+  cliEntraAppTenant : common
+  cliConfig         : {"output":"json","showHelpOnFailure":false}
+  cliEnvironment    :
+  cliVersion        : 6.1.0
+  nodeVersion       : v16.13.0
+  os                : {"platform":"win32","version":"Windows 10 Pro","release":"10.0.19045"}
+  roles             : []
+  scopes            : ["AllSites.FullControl"]
   ```
 
   </TabItem>
   <TabItem value="CSV">
 
   ```csv
-  os,cliVersion,nodeVersion,cliAadAppId,cliAadAppTenant,authMode,cliEnvironment,cliConfig,roles,scopes
+  os,cliVersion,nodeVersion,cliEntraAppId,cliEntraAppTenant,authMode,cliEnvironment,cliConfig,roles,scopes
   "{""platform"":""win32"",""version"":""Windows 10 Pro"",""release"":""10.0.19045""}",6.1.0,v16.13.0,31359c7f-bd7e-475c-86db-fdb8c937548e,common,DeviceCode,,"{""output"":""json"",""showHelpOnFailure"":false}",[],"[""AllSites.FullControl""]"
   ```
 
@@ -93,12 +93,11 @@ m365 cli doctor
   ---------|-------
   cliVersion | 6.1.0
   nodeVersion | v16.13.0
-  cliAadAppId | 31359c7f-bd7e-475c-86db-fdb8c937548e
-  cliAadAppTenant | common
+  cliEntraAppId | 31359c7f-bd7e-475c-86db-fdb8c937548e
+  cliEntraAppTenant | common
   authMode | DeviceCode
   cliEnvironment |
   ```
 
   </TabItem>
 </Tabs>
-
