addressed code review feedback

--- a/docs/docs/cmd/spo/folder/folder-sharinglink-list.mdx
+++ b/docs/docs/cmd/spo/folder/folder-sharinglink-list.mdx
@@ -58,7 +58,6 @@ m365 spo folder sharinglink list --webUrl https://contoso.sharepoint.com/sites/d
   ```json
   [
     {
-      "@deprecated.GrantedToIdentities": "GrantedToIdentities has been deprecated. Refer to GrantedToIdentitiesV2",
       "id": "e6100f73-981c-4bde-986b-eed262f04659",
       "roles": [
         "write"
@@ -90,8 +89,8 @@ m365 spo folder sharinglink list --webUrl https://contoso.sharepoint.com/sites/d
   <TabItem value="CSV">
 
   ```csv
-  @deprecated.GrantedToIdentities,id,shareId,hasPassword
-  GrantedToIdentities has been deprecated. Refer to GrantedToIdentitiesV2,e6100f73-981c-4bde-986b-eed262f04659,u!aHR0cHM6Ly83NTY2YXZhLnNoYXJlcG9pbnQuY29tLzpmOi9nL0V2QVFpdnpLV2ZoT3ZJOHJiNm1UVEhjQmQzUUxCOXVsUGIyQTQ1UG81ZmRuYWc,
+  id,shareId,hasPassword
+  e6100f73-981c-4bde-986b-eed262f04659,u!aHR0cHM6Ly83NTY2YXZhLnNoYXJlcG9pbnQuY29tLzpmOi9nL0V2QVFpdnpLV2ZoT3ZJOHJiNm1UVEhjQmQzUUxCOXVsUGIyQTQ1UG81ZmRuYWc,
   ```
 
   </TabItem>
@@ -106,7 +105,6 @@ m365 spo folder sharinglink list --webUrl https://contoso.sharepoint.com/sites/d
 
   Property | Value
   ---------|-------
-  @deprecated.GrantedToIdentities | GrantedToIdentities has been deprecated. Refer to GrantedToIdentitiesV2
   id | e6100f73-981c-4bde-986b-eed262f04659
   shareId | u!aHR0cHM6Ly83NTY2YXZhLnNoYXJlcG9pbnQuY29tLzpmOi9nL0V2QVFpdnpLV2ZoT3ZJOHJiNm1UVEhjQmQzUUxCOXVsUGIyQTQ1UG81ZmRuYWc
   hasPassword | false
