--- a/docs/docs/cmd/spo/list/list-get.mdx
+++ b/docs/docs/cmd/spo/list/list-get.mdx
@@ -215,6 +215,7 @@ m365 spo list get --title Documents --webUrl https://contoso.sharepoint.com/site
   ServerTemplateCanCreateFolders           : true
   TemplateFeatureId                        : 00bfea71-de22-43b2-a848-c05709900100
   Title                                    : Test
+  VersionPolicies                          : {"DefaultExpireAfterDays": 0,"DefaultTrimMode": 0,"DefaultTrimModeValue": "NoExpiration"}
   ```
 
   </TabItem>
