addressed code review feedback

--- a/docs/docs/cmd/entra/m365group/m365group-user-add.mdx
+++ b/docs/docs/cmd/entra/m365group/m365group-user-add.mdx
@@ -38,7 +38,7 @@ m365 teams user add
 : The display name of the Microsoft Teams team. Specify only one of the following: `groupId`, `groupName`, `teamId`, or `teamName`.
 
 `-n, --userName [userName]`
-: User's UPN (User Principal Name), e.g. johndoe@example.com. This option is deprecated. Please use `ids` or `userNames` instead.
+: (deprecated) User's UPN (User Principal Name), e.g. johndoe@example.com.
 
 `--ids [ids]`
 : Microsoft Entra IDs of users. You can also pass a comma-separated list of IDs. Specify either `ids` or `userNames` but not both.
