--- a/docs/docs/cmd/entra/m365group/m365group-user-add.mdx
+++ b/docs/docs/cmd/entra/m365group/m365group-user-add.mdx
@@ -13,7 +13,7 @@ m365 entra m365group user add [options]
 ## Alias
 
 ```sh
-m365 teams user add
+m365 teams user add [options]
 ```
 
 ## Options
@@ -38,7 +38,7 @@ m365 teams user add
 : The user principal names of users. You can also pass a comma-separated list of UPNs. Specify either `ids` or `userNames` but not both.
 
 `-r, --role [role]`
-: The role to be assigned to the new user: `Owner,Member`. Default `Member`.
+: The role to be assigned to the new user. Allowed values: `Owner`, `Member`. Default `Member`.
 ```
 
 <Global />
