--- a/docs/docs/cmd/entra/m365group/m365group-get.mdx
+++ b/docs/docs/cmd/entra/m365group/m365group-get.mdx
@@ -15,8 +15,11 @@ m365 entra m365group get [options]
 ## Options
 
 ```md definition-list
-`-i, --id <id>`
-: The ID of the Microsoft 365 Group or Microsoft Teams team to retrieve information for
+`-i, --id [id]`
+: The ID of the Microsoft 365 Group or Microsoft Teams team to retrieve information for. Specify either `id` or `displayName`, but not both.
+
+`-n, --displayName [displayName]`
+: Display name of the Microsoft 365 Group or Microsoft Teams team to retrieve information for. Specify either `id` or `displayName`, but not both.
 
 `--includeSiteUrl`
 : Set to retrieve the site URL for the group
@@ -30,6 +33,12 @@ Get information about the Microsoft 365 Group with id _1caf7dcd-7e83-4c3a-94f7-9
 
 ```sh
 m365 entra m365group get --id 1caf7dcd-7e83-4c3a-94f7-932a1299c844
+```
+
+Get information about the Microsoft 365 Group with displayName _Finance_
+
+```sh
+m365 entra m365group get --displayName Finance
 ```
 
 Get information about the Microsoft 365 Group with id _1caf7dcd-7e83-4c3a-94f7-932a1299c844_ and also retrieve the URL of the corresponding SharePoint site
