Updates entra m365group commands to accept displayName option. Closes #6147

--- a/docs/docs/cmd/entra/m365group/m365group-user-remove.mdx
+++ b/docs/docs/cmd/entra/m365group/m365group-user-remove.mdx
@@ -17,7 +17,7 @@ m365 entra m365group user remove [options]
 : The ID of the Microsoft 365 group. Specify only one of the following: `groupId`, `groupName`, `teamId`, or `teamName`.
 
 `--groupName [groupName]`
-: The display name of the Microsoft 365 group. Specify only one of the following: `groupId`, `groupName`, `teamId`, or `teamName`..
+: The display name of the Microsoft 365 group. Specify only one of the following: `groupId`, `groupName`, `teamId`, or `teamName`.
 
 `--teamId [teamId]`
 : The ID of the Microsoft Teams team. Specify only one of the following: `groupId`, `groupName`, `teamId`, or `teamName`.
