--- a/docs/docs/v9-upgrade-guidance.mdx
+++ b/docs/docs/v9-upgrade-guidance.mdx
@@ -73,3 +73,21 @@ In the [spo list list](./cmd/spo/list/list-list.mdx) we removed the `Url` from t
 #### What action do I need to take?
 
 - Please update your scripts not to use the `Url` property from the command output.
+
+### Updated command `spo file copy`
+
+Because of some limitations of the current [spo file copy](./cmd/spo/file/file-copy.mdx) command, we have decided to move it to a new endpoint. This change is necessary to ensure the command's functionality and reliability. Because of the new endpoint, the command input and output have changed.
+
+**Command options:**
+
+Unfortunately, we had to drop the `--resetAuthorAndCreated` options as it's no longer supported by the new endpoint. In return, we were able to add two new options:
+- `--ignoreVersionHistory`: Only copy the most recent version of the file and ignore the version history.
+- `--skipWait`: Don't wait for the copy operation to complete.
+
+**Command output:**
+
+In the past versions of CLI for Microsoft 365, the command had no output. When using option `--nameConflictBehavior rename`, it's hard for the user to know what the actual name of the copied file is. With the new endpoint, the command now returns the file information about the destination file, providing you with all the info you need to execute other commands on this file.
+
+#### What action do I need to take?
+
+When using the [spo file copy](./cmd/spo/file/file-copy.mdx) command, please use the new command input. This means that you'll have to remove option `--resetAuthorAndCreated` from your scripts and automation tools.
