Updates release notes

--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -4,6 +4,17 @@ sidebar_position: 3
 
 # Release notes
 
+## v10.0.0 (beta)
+
+### Changes
+
+- updated option names of 'app permission add' to plural [#5719](https://github.com/pnp/cli-microsoft365/issues/5975)
+- removed deprecated Guest value from 'aad m365group user list' command [#5558](https://github.com/pnp/cli-microsoft365/issues/5558)
+- added `--force` option to 'spo site appcatalog remove' command [#6091](https://github.com/pnp/cli-microsoft365/issues/6091)
+- aligned options with naming convention [#5616](https://github.com/pnp/cli-microsoft365/issues/5616)
+- removed duplicate property from 'spo list list' command [#6042](https://github.com/pnp/cli-microsoft365/issues/6042)
+- updated 'spo tenant recyclebinitem restore' command [#6063](https://github.com/pnp/cli-microsoft365/issues/6063)
+
 ## [v9.0.0](https://github.com/pnp/cli-microsoft365/releases/tag/v9.0.0)
 
 ### New commands 
