Updates release notes

--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -14,6 +14,13 @@ sidebar_position: 3
 - aligned options with naming convention [#5616](https://github.com/pnp/cli-microsoft365/issues/5616)
 - removed duplicate property from 'spo list list' command [#6042](https://github.com/pnp/cli-microsoft365/issues/6042)
 - updated 'spo tenant recyclebinitem restore' command [#6063](https://github.com/pnp/cli-microsoft365/issues/6063)
+- removed deprecated option '--wait' from 'spo site remove' command [#5956](https://github.com/pnp/cli-microsoft365/issues/5956)
+- reworked command 'spo file copy' to new API endpoint [#6152](https://github.com/pnp/cli-microsoft365/issues/6152)
+- removed deprecated CLI environment variables [#5918](https://github.com/pnp/cli-microsoft365/issues/5918)
+- updated options of 'entra enterpriseapp' commands [#6155](https://github.com/pnp/cli-microsoft365/issues/6155)
+- removed 'overwrite' option from 'spfx project github workflow add' command [#5765](https://github.com/pnp/cli-microsoft365/issues/5765)
+- updated 'm365 status' command output [#5849](https://github.com/pnp/cli-microsoft365/issues/5849)
+- removed 'spo folder rename' alias [#5911](https://github.com/pnp/cli-microsoft365/issues/5911)
 
 ## v9.1.0 (beta)
 
