Updates release notes

--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -18,13 +18,21 @@ sidebar_position: 3
 
 - [spe containertype list](../cmd/spe/containertype/containertype-list.mdx) - retrieves a list of Container Types created for a SharePoint Embedded Application [#5989](https://github.com/pnp/cli-microsoft365/issues/5989)
 
+**SharePoint:**
+
+- [spo folder sharinglink get](../cmd/spo/folder/folder-sharinglink-get.mdx) - gets details about a specific sharing link on a folder [#5962](https://github.com/pnp/cli-microsoft365/issues/5962)
+- [spo folder sharinglink list](../cmd/spo/folder/folder-sharinglink-list.mdx) - lists sharing links on a folder [#5961](https://github.com/pnp/cli-microsoft365/issues/5961)
+
 ### Changes
 
 - added 'componentProperties' option to 'spo spfx' commands [#5975](https://github.com/pnp/cli-microsoft365/issues/5975)
 - added prompting to [connection use](../cmd/connection/connection-use.mdx) [#6173](https://github.com/pnp/cli-microsoft365/issues/6173)
-- enhanced [spo list roleassignment](../cmd/spo/list//list-roleassignment-add.mdx) commands with support for Entra groups [#6194](https://github.com/pnp/cli-microsoft365/issues/6194)
+- enhanced [spo list roleassignment](../cmd/spo/list/list-roleassignment-add.mdx) commands with support for Entra groups [#6194](https://github.com/pnp/cli-microsoft365/issues/6194)
 - fixed command [teams meeting list](../cmd/teams/meeting/meeting-list.mdx) [#5968](https://github.com/pnp/cli-microsoft365/issues/5968)
 - introduced zod validation [#5639](https://github.com/pnp/cli-microsoft365/issues/5639)
+- added 'VersionPolicies' to [spo list get](../cmd/spo/list/list-get.mdx) command [#5983](https://github.com/pnp/cli-microsoft365/issues/5983)
+- added capabilities to add multiple users in an m365group [#6060](https://github.com/pnp/cli-microsoft365/issues/6060)
+- added capabilities to set multiple users in an m365group [#6059](https://github.com/pnp/cli-microsoft365/issues/6059)
 
 ## [v8.0.0](https://github.com/pnp/cli-microsoft365/releases/tag/v8.0.0)
 
