--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -33,6 +33,7 @@ sidebar_position: 3
 - added 'VersionPolicies' to [spo list get](../cmd/spo/list/list-get.mdx) command [#5983](https://github.com/pnp/cli-microsoft365/issues/5983)
 - added capabilities to add multiple users in an m365group [#6060](https://github.com/pnp/cli-microsoft365/issues/6060)
 - added capabilities to set multiple users in an m365group [#6059](https://github.com/pnp/cli-microsoft365/issues/6059)
+- enhanced the 'flow get' command to return additional properties [#4683](https://github.com/pnp/cli-microsoft365/issues/4683)
 
 ## [v8.0.0](https://github.com/pnp/cli-microsoft365/releases/tag/v8.0.0)
 
