added missing --force in example

--- a/docs/docs/cmd/spo/app/app-uninstall.mdx
+++ b/docs/docs/cmd/spo/app/app-uninstall.mdx
@@ -43,7 +43,7 @@ m365 spo app uninstall --id b2307a39-e878-458b-bc90-03bc578531d6 --siteUrl https
 Uninstall the app with the specified ID from the specified site without prompting for confirmation.
 
 ```sh
-m365 spo app uninstall --id b2307a39-e878-458b-bc90-03bc578531d6 --siteUrl https://contoso.sharepoint.com
+m365 spo app uninstall --id b2307a39-e878-458b-bc90-03bc578531d6 --siteUrl https://contoso.sharepoint.com --force
 ```
 
 Uninstall the app with the specified ID from the specified site where the app is deployed to the site collection app catalog.
