Updates release notes

--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -34,6 +34,8 @@ sidebar_position: 3
 - added capabilities to add multiple users in an m365group [#6060](https://github.com/pnp/cli-microsoft365/issues/6060)
 - added capabilities to set multiple users in an m365group [#6059](https://github.com/pnp/cli-microsoft365/issues/6059)
 - enhanced the 'flow get' command to return additional properties [#4683](https://github.com/pnp/cli-microsoft365/issues/4683)
+- fixed 'pa app export' without packageDisplayName [#6215](https://github.com/pnp/cli-microsoft365/issues/6215)
+- added missing --force in example for 'spo app uninstall' command [#6245](https://github.com/pnp/cli-microsoft365/issues/6245)
 
 ## [v8.0.0](https://github.com/pnp/cli-microsoft365/releases/tag/v8.0.0)
 
