--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -10,6 +10,8 @@ sidebar_position: 3
 
 **Entra ID:**
 
+- [entra enterpriseapp remove](../cmd/entra/enterpriseapp/enterpriseapp-remove.mdx) - Deletes an enterprise application (or service principal) [#6111](https://github.com/pnp/cli-microsoft365/issues/6111)
+- [entra group set](../cmd/entra/group/group-set.mdx) - updates a Microsoft Entra group [#5479](https://github.com/pnp/cli-microsoft365/issues/5479)
 - [entra multitenant add](../cmd/entra/multitenant/multitenant-add.mdx) - creates a new multitenant organization [#6006](https://github.com/pnp/cli-microsoft365/issues/6006)
 - [entra multitenant remove](../cmd/entra/multitenant/multitenant-remove.mdx) - removes a multitenant organization [#6009](https://github.com/pnp/cli-microsoft365/issues/6009)
 - [entra multitenant set](../cmd/entra/multitenant/multitenant-set.mdx) - updates the properties of a multitenant organization [#6008](https://github.com/pnp/cli-microsoft365/issues/6008)
@@ -23,6 +25,10 @@ sidebar_position: 3
 - [spo folder sharinglink get](../cmd/spo/folder/folder-sharinglink-get.mdx) - gets details about a specific sharing link on a folder [#5962](https://github.com/pnp/cli-microsoft365/issues/5962)
 - [spo folder sharinglink list](../cmd/spo/folder/folder-sharinglink-list.mdx) - lists sharing links on a folder [#5961](https://github.com/pnp/cli-microsoft365/issues/5961)
 
+**Teams:**
+
+- [teams message restore](../cmd/teams/message/message-restore.mdx) - restores a deleted message from a channel in a Microsoft Teams team [#5860](https://github.com/pnp/cli-microsoft365/issues/5860)
+
 ### Changes
 
 - added 'componentProperties' option to 'spo spfx' commands [#5975](https://github.com/pnp/cli-microsoft365/issues/5975)
@@ -33,9 +39,9 @@ sidebar_position: 3
 - added 'VersionPolicies' to [spo list get](../cmd/spo/list/list-get.mdx) command [#5983](https://github.com/pnp/cli-microsoft365/issues/5983)
 - added capabilities to add multiple users in an m365group [#6060](https://github.com/pnp/cli-microsoft365/issues/6060)
 - added capabilities to set multiple users in an m365group [#6059](https://github.com/pnp/cli-microsoft365/issues/6059)
-- enhanced the 'flow get' command to return additional properties [#4683](https://github.com/pnp/cli-microsoft365/issues/4683)
-- fixed 'pa app export' without packageDisplayName [#6215](https://github.com/pnp/cli-microsoft365/issues/6215)
-- added missing --force in example for 'spo app uninstall' command [#6245](https://github.com/pnp/cli-microsoft365/issues/6245)
+- enhanced the [flow get](../cmd/flow/flow-get.mdx) command to return additional properties [#4683](https://github.com/pnp/cli-microsoft365/issues/4683)
+- fixed [pa app export](../cmd/pa/app/app-export.mdx) without packageDisplayName [#6215](https://github.com/pnp/cli-microsoft365/issues/6215)
+- added missing --force in example for [spo app uninstall](../cmd/spo/app/app-uninstall.mdx) command [#6245](https://github.com/pnp/cli-microsoft365/issues/6245)
 
 ## [v8.0.0](https://github.com/pnp/cli-microsoft365/releases/tag/v8.0.0)
 
